; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/pgtypeslib/extr_timestamp.c_EncodeSpecialTimestamp.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/pgtypeslib/extr_timestamp.c_EncodeSpecialTimestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EARLY = common dso_local global i32 0, align 4
@LATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @EncodeSpecialTimestamp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @EncodeSpecialTimestamp(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @TIMESTAMP_IS_NOBEGIN(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* @EARLY, align 4
  %11 = call i32 @strcpy(i8* %9, i32 %10)
  br label %23

12:                                               ; preds = %2
  %13 = load i32, i32* %3, align 4
  %14 = call i64 @TIMESTAMP_IS_NOEND(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* @LATE, align 4
  %19 = call i32 @strcpy(i8* %17, i32 %18)
  br label %22

20:                                               ; preds = %12
  %21 = call i32 (...) @abort() #3
  unreachable

22:                                               ; preds = %16
  br label %23

23:                                               ; preds = %22, %8
  ret void
}

declare dso_local i64 @TIMESTAMP_IS_NOBEGIN(i32) #1

declare dso_local i32 @strcpy(i8*, i32) #1

declare dso_local i64 @TIMESTAMP_IS_NOEND(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
